# compact-space

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: configuration.ron
src/: arena.rs  assets.rs  auxiliary.rs  components.rs  main.rs
src/models/: config.rs  mod.rs  sound_pool.rs
src/ressources/: camera.rs  mod.rs
src/scenes/: game.rs  manager.rs  mod.rs
src/systems/: bullet_system.rs  camera_system.rs  collision_system.rs  dying_system.rs  emitter_system.rs  explosion_system.rs  follower_system.rs  input_system.rs  lifetime_system.rs  mod.rs  moving_system.rs  particle_system.rs  player_system.rs  rotating_system.rs  sound_system.rs  spawning_system.rs  target_system.rs  timer_system.rs  visibility_system.rs
